<resources>
    <string name="app_name">MarshmallowApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="title_activity_topten_downloader">ToptenDownloader</string>
    <string name="title_activity_youtube">Youtube Player</string>
    <string name="title_activity_standalone_youtube">Youtube Standalone</string>
    <string name="title_activity_flickr__main_">Flickr Main</string>
    <string name="title_activity_layouts">All Layouts</string>
    <string name="title_activity_linear_layout">Linear Layout Activity</string>
    <string name="title_activity_frame">Frame Activity</string>
    <string name="title_activity_relative_layout">Relative Layout Activity</string>
    <string name="title_activity_table_layout">Table Layout Activity</string>
    <string name="title_activity_table">Table Activity</string>
    <string name="title_activity_dbsqlite_test">DB Sqlite Test Activity</string>
    <string name="title_activity_dbcontacts_via_content_resolver">DB Contacts Via Content Resolver
        Activity
    </string>
    <string name="title_activity_friends_app">Friends App Activity</string>

    <!--string resources for rest service app-->
    <string name="rest_app">Rest Service App</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phoneNumber">Phone Number</string>
    <string name="prompt_note">Note</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_update">Update</string>
    <string name="action_reset">Reset</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_requied">This field is required</string>
    <string name="error_url_not_found">Invalid URL! File could not be found</string>
    <string name="error_password_length">Password length must be at least 5 characters long</string>
    <string name="infot_label">User Information</string>
    <string name="title_activity_static_data">StaticDataActivity</string>

</resources>
